--- a/index.html
+++ b/index.html
@@ -3,216 +3,141 @@
 <head>
   <title>Lolscord</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
   <style>
-    body {
-      margin: 0;
-      font-family: "Segoe UI", Arial, sans-serif;
-      background: #313338;
-      color: #dbdee1;
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
-    }
-
-    .topbar {
-      background: #2b2d31;
-      padding: 15px;
-      font-weight: 600;
-      border-bottom: 1px solid #1e1f22;
-    }
-
-    #messages {
-      flex: 1;
-      overflow-y: auto;
-      padding: 20px;
-    }
-
-    .message {
-      display: flex;
-      margin-bottom: 15px;
-    }
-
-    .avatar {
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      background: #5865f2;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-weight: bold;
-      margin-right: 12px;
-      color: white;
-    }
-
-    .content {
-      display: flex;
-      flex-direction: column;
-    }
-
-    .username {
-      font-weight: 600;
-      font-size: 14px;
-      color: #ffffff;
-    }
-
-    .text {
-      font-size: 15px;
-      margin-top: 2px;
-    }
-
-    .input-area {
-      background: #383a40;
-      padding: 15px;
-    }
-
-    .input-wrapper {
-      background: #404249;
-      border-radius: 8px;
-      padding: 10px;
-      display: flex;
-      align-items: center;
-    }
-
-    input {
-      flex: 1;
-      background: transparent;
-      border: none;
-      outline: none;
-      color: white;
-      font-size: 14px;
-    }
-
-    button {
-      background: #5865f2;
-      border: none;
-      padding: 8px 12px;
-      color: white;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background: #4752c4;
-    }
-
-    #usernameModal {
-      position: fixed;
-      inset: 0;
-      background: rgba(0,0,0,0.7);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .modal-box {
-      background: #2b2d31;
-      padding: 30px;
-      border-radius: 10px;
-      width: 300px;
-    }
+    body { margin:0; font-family: Arial; background:#313338; color:white; }
+    .center { display:flex; justify-content:center; align-items:center; height:100vh; }
+    .box { background:#2b2d31; padding:30px; border-radius:8px; width:300px; }
+    input { width:100%; padding:8px; margin:6px 0; }
+    button { width:100%; padding:8px; margin-top:10px; background:#5865f2; border:none; color:white; cursor:pointer; }
+    #chat { display:none; height:100vh; flex-direction:column; }
+    #messages { flex:1; overflow-y:auto; padding:20px; }
+    .message { margin-bottom:10px; }
+    .input-area { display:flex; padding:10px; background:#383a40; }
+    .input-area input { flex:1; }
   </style>
 </head>
 <body>
 
-<div class="topbar">
-  # global-chat
-</div>
-
-<div id="messages"></div>
-
-<div class="input-area">
-  <div class="input-wrapper">
-    <input id="messageInput" placeholder="Message #global-chat"/>
-    <button onclick="sendMessage()">Send</button>
+<div id="auth" class="center">
+  <div class="box">
+    <h2 id="authTitle">Login</h2>
+    <input id="username" placeholder="Username (register only)" style="display:none"/>
+    <input id="email" placeholder="Email"/>
+    <input id="password" type="password" placeholder="Password"/>
+    <input id="confirmPassword" type="password" placeholder="Confirm Password" style="display:none"/>
+    <button onclick="handleAuth()">Submit</button>
+    <p onclick="toggleMode()" style="cursor:pointer; margin-top:10px;" id="toggleText">Don't have an account? Register</p>
   </div>
 </div>
 
-<div id="usernameModal">
-  <div class="modal-box">
-    <h2>Enter Username</h2>
-    <input id="usernameInput" placeholder="Username"/>
-    <button onclick="setUsername()" style="margin-top:10px;">Join</button>
+<div id="chat">
+  <div style="padding:10px; background:#2b2d31;">
+    Logged in as <span id="loggedUser"></span>
+    <button onclick="logout()" style="float:right;">Logout</button>
+  </div>
+  <div id="messages"></div>
+  <div class="input-area">
+    <input id="messageInput" placeholder="Type message..."/>
+    <button onclick="sendMessage()">Send</button>
   </div>
 </div>
 
 <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 
 <script>
-  let username = "";
-  let socket;
+let mode = "login";
+let socket;
+const backend = "https://lolscord-backend-8ghq.onrender.com";
 
-  function setUsername() {
-    const input = document.getElementById("usernameInput").value.trim();
-    if (!input) return;
+function toggleMode() {
+  mode = mode === "login" ? "register" : "login";
+  document.getElementById("authTitle").innerText = mode === "login" ? "Login" : "Register";
+  document.getElementById("username").style.display = mode === "register" ? "block" : "none";
+  document.getElementById("confirmPassword").style.display = mode === "register" ? "block" : "none";
+  document.getElementById("toggleText").innerText =
+    mode === "login" ? "Don't have an account? Register" : "Already have an account? Login";
+}
 
-    username = input;
+async function handleAuth() {
+  const email = document.getElementById("email").value;
+  const password = document.getElementById("password").value;
 
-    socket = io("https://lolscord-backend-8ghq.onrender.com");
+  if (mode === "register") {
+    const username = document.getElementById("username").value;
+    const confirmPassword = document.getElementById("confirmPassword").value;
 
-    // Load old messages
-    socket.on("load messages", (messages) => {
-      document.getElementById("messages").innerHTML = "";
-      messages.forEach(addMessage);
+    const res = await fetch(backend + "/register", {
+      method:"POST",
+      headers:{ "Content-Type":"application/json" },
+      body: JSON.stringify({ username, email, password, confirmPassword })
     });
 
-    // Listen for new messages
-    socket.on("chat message", (data) => {
-      addMessage(data);
+    const data = await res.json();
+    alert(data.message);
+  } else {
+    const res = await fetch(backend + "/login", {
+      method:"POST",
+      headers:{ "Content-Type":"application/json" },
+      body: JSON.stringify({ email, password })
     });
 
-    document.getElementById("usernameModal").style.display = "none";
+    const data = await res.json();
+
+    if (data.token) {
+      localStorage.setItem("token", data.token);
+      localStorage.setItem("username", data.username);
+      startChat(data.username);
+    } else {
+      alert(data.message);
+    }
   }
+}
 
-  function sendMessage() {
-    const input = document.getElementById("messageInput");
-    const message = input.value.trim();
-    if (!message) return;
+function startChat(username) {
+  document.getElementById("auth").style.display = "none";
+  document.getElementById("chat").style.display = "flex";
+  document.getElementById("loggedUser").innerText = username;
 
-    socket.emit("chat message", {
-      username: username,
-      message: message
-    });
+  socket = io(backend);
 
-    input.value = "";
-  }
-
-  function addMessage(data) {
-    const msgDiv = document.createElement("div");
-    msgDiv.className = "message";
-
-    const avatar = document.createElement("div");
-    avatar.className = "avatar";
-    avatar.textContent = data.username.charAt(0).toUpperCase();
-
-    const content = document.createElement("div");
-    content.className = "content";
-
-    const name = document.createElement("div");
-    name.className = "username";
-    name.textContent = data.username;
-
-    const text = document.createElement("div");
-    name.className = "username";
-    text.className = "text";
-    text.textContent = data.message;
-
-    content.appendChild(name);
-    content.appendChild(text);
-
-    msgDiv.appendChild(avatar);
-    msgDiv.appendChild(content);
-
-    document.getElementById("messages").appendChild(msgDiv);
-
-    const messagesDiv = document.getElementById("messages");
-    messagesDiv.scrollTop = messagesDiv.scrollHeight;
-  }
-
-  document.getElementById("messageInput").addEventListener("keypress", function(e) {
-    if (e.key === "Enter") sendMessage();
+  socket.on("load messages", (messages) => {
+    document.getElementById("messages").innerHTML = "";
+    messages.forEach(msg => addMessage(msg));
   });
+
+  socket.on("chat message", (msg) => {
+    addMessage(msg);
+  });
+}
+
+function sendMessage() {
+  const msg = document.getElementById("messageInput").value;
+  if (!msg) return;
+
+  socket.emit("chat message", {
+    username: localStorage.getItem("username"),
+    message: msg
+  });
+
+  document.getElementById("messageInput").value = "";
+}
+
+function addMessage(msg) {
+  const div = document.createElement("div");
+  div.className = "message";
+  div.innerText = msg.username + ": " + msg.message;
+  document.getElementById("messages").appendChild(div);
+}
+
+function logout() {
+  localStorage.clear();
+  location.reload();
+}
+
+// Auto login
+if (localStorage.getItem("token")) {
+  startChat(localStorage.getItem("username"));
+}
 </script>
 
 </body>
