--- a/index.html
+++ b/index.html
@@ -3,51 +3,175 @@
 <head>
   <title>Lolscord</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
   <style>
-    body { margin:0; font-family: Arial; background:#313338; color:white; }
-    .center { display:flex; justify-content:center; align-items:center; height:100vh; }
-    .box { background:#2b2d31; padding:30px; border-radius:8px; width:300px; }
-    input { width:100%; padding:8px; margin:6px 0; }
-    button { width:100%; padding:8px; margin-top:10px; background:#5865f2; border:none; color:white; cursor:pointer; }
-    #chat { display:none; height:100vh; flex-direction:column; }
-    #messages { flex:1; overflow-y:auto; padding:20px; }
-    .message { margin-bottom:10px; }
-    .input-area { display:flex; padding:10px; background:#383a40; }
-    .input-area input { flex:1; }
+    body {
+      margin: 0;
+      font-family: "Segoe UI", Arial, sans-serif;
+      background: #313338;
+      color: white;
+      height: 100vh;
+      display: flex;
+    }
+
+    /* Sidebar */
+    .sidebar {
+      width: 240px;
+      background: #2b2d31;
+      display: flex;
+      flex-direction: column;
+      padding: 20px;
+    }
+
+    .sidebar h2 {
+      margin: 0 0 20px 0;
+    }
+
+    .sidebar button {
+      margin-top: auto;
+      padding: 10px;
+      background: #5865f2;
+      border: none;
+      color: white;
+      cursor: pointer;
+      border-radius: 6px;
+    }
+
+    /* Main Chat Area */
+    .main {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .topbar {
+      background: #2b2d31;
+      padding: 15px;
+      font-weight: 600;
+      border-bottom: 1px solid #1e1f22;
+    }
+
+    #messages {
+      flex: 1;
+      overflow-y: auto;
+      padding: 20px;
+    }
+
+    .message {
+      margin-bottom: 15px;
+    }
+
+    .username {
+      font-weight: bold;
+      margin-right: 5px;
+      color: #5865f2;
+    }
+
+    .input-area {
+      display: flex;
+      padding: 15px;
+      background: #383a40;
+    }
+
+    .input-area input {
+      flex: 1;
+      padding: 10px;
+      background: #404249;
+      border: none;
+      color: white;
+      border-radius: 6px;
+    }
+
+    .input-area button {
+      margin-left: 10px;
+      padding: 10px 15px;
+      background: #5865f2;
+      border: none;
+      color: white;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    /* Auth Screen */
+    .auth-container {
+      position: fixed;
+      inset: 0;
+      background: #313338;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .auth-box {
+      background: #2b2d31;
+      padding: 40px;
+      width: 400px;
+      border-radius: 10px;
+    }
+
+    .auth-box input {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+    }
+
+    .auth-box button {
+      width: 100%;
+      padding: 10px;
+      background: #5865f2;
+      border: none;
+      color: white;
+      cursor: pointer;
+      border-radius: 6px;
+    }
+
+    .auth-toggle {
+      margin-top: 15px;
+      cursor: pointer;
+      color: #5865f2;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
 
-<div id="auth" class="center">
-  <div class="box">
+<div id="auth" class="auth-container">
+  <div class="auth-box">
     <h2 id="authTitle">Login</h2>
-    <input id="username" placeholder="Username (register only)" style="display:none"/>
-    <input id="email" placeholder="Email"/>
-    <input id="password" type="password" placeholder="Password"/>
-    <input id="confirmPassword" type="password" placeholder="Confirm Password" style="display:none"/>
+    <input id="username" placeholder="Username" style="display:none;">
+    <input id="email" placeholder="Email">
+    <input id="password" type="password" placeholder="Password">
+    <input id="confirmPassword" type="password" placeholder="Confirm Password" style="display:none;">
     <button onclick="handleAuth()">Submit</button>
-    <p onclick="toggleMode()" style="cursor:pointer; margin-top:10px;" id="toggleText">Don't have an account? Register</p>
+    <div class="auth-toggle" onclick="toggleMode()" id="toggleText">
+      Don't have an account? Register
+    </div>
   </div>
 </div>
 
-<div id="chat">
-  <div style="padding:10px; background:#2b2d31;">
-    Logged in as <span id="loggedUser"></span>
-    <button onclick="logout()" style="float:right;">Logout</button>
+<div id="chat" style="display:none; width:100%;">
+  <div class="sidebar">
+    <h2>Lolscord</h2>
+    <div id="loggedUser"></div>
+    <button onclick="logout()">Logout</button>
   </div>
-  <div id="messages"></div>
-  <div class="input-area">
-    <input id="messageInput" placeholder="Type message..."/>
-    <button onclick="sendMessage()">Send</button>
+
+  <div class="main">
+    <div class="topbar"># global-chat</div>
+    <div id="messages"></div>
+    <div class="input-area">
+      <input id="messageInput" placeholder="Type a message...">
+      <button onclick="sendMessage()">Send</button>
+    </div>
   </div>
 </div>
 
 <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 
 <script>
-let mode = "login";
-let socket;
 const backend = "https://lolscord-backend-8ghq.onrender.com";
+let socket;
+let mode = "login";
 
 function toggleMode() {
   mode = mode === "login" ? "register" : "login";
@@ -59,12 +183,12 @@ function toggleMode() {
 }
 
 async function handleAuth() {
-  const email = document.getElementById("email").value;
-  const password = document.getElementById("password").value;
+  const email = emailInput.value;
+  const password = passwordInput.value;
 
   if (mode === "register") {
-    const username = document.getElementById("username").value;
-    const confirmPassword = document.getElementById("confirmPassword").value;
+    const username = usernameInput.value;
+    const confirmPassword = confirmPasswordInput.value;
 
     const res = await fetch(backend + "/register", {
       method:"POST",
@@ -86,32 +210,30 @@ async function handleAuth() {
     if (data.token) {
       localStorage.setItem("token", data.token);
       localStorage.setItem("username", data.username);
-      startChat(data.username);
+      startChat();
     } else {
       alert(data.message);
     }
   }
 }
 
-function startChat(username) {
+function startChat() {
   document.getElementById("auth").style.display = "none";
   document.getElementById("chat").style.display = "flex";
-  document.getElementById("loggedUser").innerText = username;
+  document.getElementById("loggedUser").innerText = localStorage.getItem("username");
 
   socket = io(backend);
 
-  socket.on("load messages", (messages) => {
-    document.getElementById("messages").innerHTML = "";
-    messages.forEach(msg => addMessage(msg));
+  socket.on("load messages", messages => {
+    messagesDiv.innerHTML = "";
+    messages.forEach(addMessage);
   });
 
-  socket.on("chat message", (msg) => {
-    addMessage(msg);
-  });
+  socket.on("chat message", addMessage);
 }
 
 function sendMessage() {
-  const msg = document.getElementById("messageInput").value;
+  const msg = messageInput.value;
   if (!msg) return;
 
   socket.emit("chat message", {
@@ -119,14 +241,14 @@ function sendMessage() {
     message: msg
   });
 
-  document.getElementById("messageInput").value = "";
+  messageInput.value = "";
 }
 
 function addMessage(msg) {
   const div = document.createElement("div");
   div.className = "message";
-  div.innerText = msg.username + ": " + msg.message;
-  document.getElementById("messages").appendChild(div);
+  div.innerHTML = "<span class='username'>" + msg.username + ":</span> " + msg.message;
+  messages.appendChild(div);
 }
 
 function logout() {
@@ -134,9 +256,8 @@ function logout() {
   location.reload();
 }
 
-// Auto login
 if (localStorage.getItem("token")) {
-  startChat(localStorage.getItem("username"));
+  startChat();
 }
 </script>
 
