--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       border-radius: 6px;
     }
 
-    /* Main Chat Area */
+    /* Main Chat */
     .main {
       flex: 1;
       display: flex;
@@ -49,6 +49,30 @@
       padding: 15px;
       font-weight: 600;
       border-bottom: 1px solid #1e1f22;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .username-entry {
+      display: flex;
+      gap: 8px;
+    }
+
+    .username-entry input {
+      padding: 5px 8px;
+      border-radius: 5px;
+      border: none;
+      outline: none;
+    }
+
+    .username-entry button {
+      padding: 5px 10px;
+      background: #5865f2;
+      border: none;
+      color: white;
+      border-radius: 5px;
+      cursor: pointer;
     }
 
     #messages {
@@ -63,8 +87,8 @@
 
     .username {
       font-weight: bold;
-      margin-right: 5px;
       color: #5865f2;
+      margin-right: 5px;
     }
 
     .input-area {
@@ -91,78 +115,30 @@
       border-radius: 6px;
       cursor: pointer;
     }
-
-    /* Auth Screen */
-    .auth-container {
-      position: fixed;
-      inset: 0;
-      background: #313338;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .auth-box {
-      background: #2b2d31;
-      padding: 40px;
-      width: 400px;
-      border-radius: 10px;
-    }
-
-    .auth-box input {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-    }
-
-    .auth-box button {
-      width: 100%;
-      padding: 10px;
-      background: #5865f2;
-      border: none;
-      color: white;
-      cursor: pointer;
-      border-radius: 6px;
-    }
-
-    .auth-toggle {
-      margin-top: 15px;
-      cursor: pointer;
-      color: #5865f2;
-      text-align: center;
-    }
   </style>
 </head>
 <body>
 
-<div id="auth" class="auth-container">
-  <div class="auth-box">
-    <h2 id="authTitle">Login</h2>
-    <input id="username" placeholder="Username" style="display:none;">
-    <input id="email" placeholder="Email">
-    <input id="password" type="password" placeholder="Password">
-    <input id="confirmPassword" type="password" placeholder="Confirm Password" style="display:none;">
-    <button onclick="handleAuth()">Submit</button>
-    <div class="auth-toggle" onclick="toggleMode()" id="toggleText">
-      Don't have an account? Register
-    </div>
-  </div>
+<div class="sidebar">
+  <h2>Lolscord</h2>
+  <button onclick="logout()">Logout</button>
 </div>
 
-<div id="chat" style="display:none; width:100%;">
-  <div class="sidebar">
-    <h2>Lolscord</h2>
-    <div id="loggedUser"></div>
-    <button onclick="logout()">Logout</button>
+<div class="main">
+  <div class="topbar">
+    <div># global-chat</div>
+
+    <div id="usernameBox" class="username-entry">
+      <input id="usernameInput" placeholder="Enter username">
+      <button onclick="setUsername()">Save</button>
+    </div>
   </div>
 
-  <div class="main">
-    <div class="topbar"># global-chat</div>
-    <div id="messages"></div>
-    <div class="input-area">
-      <input id="messageInput" placeholder="Type a message...">
-      <button onclick="sendMessage()">Send</button>
-    </div>
+  <div id="messages"></div>
+
+  <div class="input-area">
+    <input id="messageInput" placeholder="Type a message...">
+    <button onclick="sendMessage()">Send</button>
   </div>
 </div>
 
@@ -170,94 +146,62 @@
 
 <script>
 const backend = "https://lolscord-backend-8ghq.onrender.com";
-let socket;
-let mode = "login";
+let socket = io(backend);
 
-function toggleMode() {
-  mode = mode === "login" ? "register" : "login";
-  document.getElementById("authTitle").innerText = mode === "login" ? "Login" : "Register";
-  document.getElementById("username").style.display = mode === "register" ? "block" : "none";
-  document.getElementById("confirmPassword").style.display = mode === "register" ? "block" : "none";
-  document.getElementById("toggleText").innerText =
-    mode === "login" ? "Don't have an account? Register" : "Already have an account? Login";
+// If username already saved → hide box
+if (localStorage.getItem("username")) {
+  document.getElementById("usernameBox").style.display = "none";
 }
 
-async function handleAuth() {
-  const email = emailInput.value;
-  const password = passwordInput.value;
+// Save username
+function setUsername() {
+  const username = usernameInput.value.trim();
+  if (!username) return;
 
-  if (mode === "register") {
-    const username = usernameInput.value;
-    const confirmPassword = confirmPasswordInput.value;
-
-    const res = await fetch(backend + "/register", {
-      method:"POST",
-      headers:{ "Content-Type":"application/json" },
-      body: JSON.stringify({ username, email, password, confirmPassword })
-    });
-
-    const data = await res.json();
-    alert(data.message);
-  } else {
-    const res = await fetch(backend + "/login", {
-      method:"POST",
-      headers:{ "Content-Type":"application/json" },
-      body: JSON.stringify({ email, password })
-    });
-
-    const data = await res.json();
-
-    if (data.token) {
-      localStorage.setItem("token", data.token);
-      localStorage.setItem("username", data.username);
-      startChat();
-    } else {
-      alert(data.message);
-    }
-  }
+  localStorage.setItem("username", username);
+  document.getElementById("usernameBox").style.display = "none";
 }
 
-function startChat() {
-  document.getElementById("auth").style.display = "none";
-  document.getElementById("chat").style.display = "flex";
-  document.getElementById("loggedUser").innerText = localStorage.getItem("username");
-
-  socket = io(backend);
-
-  socket.on("load messages", messages => {
-    messagesDiv.innerHTML = "";
-    messages.forEach(addMessage);
-  });
-
-  socket.on("chat message", addMessage);
+// Logout
+function logout() {
+  localStorage.removeItem("username");
+  location.reload();
 }
 
+// Load old messages
+socket.on("load messages", messages => {
+  messagesDiv.innerHTML = "";
+  messages.forEach(addMessage);
+});
+
+// New messages
+socket.on("chat message", addMessage);
+
+// Send message
 function sendMessage() {
-  const msg = messageInput.value;
+  const username = localStorage.getItem("username");
+  if (!username) {
+    alert("Enter username first");
+    return;
+  }
+
+  const msg = messageInput.value.trim();
   if (!msg) return;
 
   socket.emit("chat message", {
-    username: localStorage.getItem("username"),
+    username: username,
     message: msg
   });
 
   messageInput.value = "";
 }
 
+// Add message to UI
 function addMessage(msg) {
   const div = document.createElement("div");
   div.className = "message";
   div.innerHTML = "<span class='username'>" + msg.username + ":</span> " + msg.message;
   messages.appendChild(div);
-}
-
-function logout() {
-  localStorage.clear();
-  location.reload();
-}
-
-if (localStorage.getItem("token")) {
-  startChat();
 }
 </script>
 
