--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       display: flex;
     }
 
-    /* Sidebar */
     .sidebar {
       width: 240px;
       background: #2b2d31;
@@ -37,7 +36,6 @@
       border-radius: 6px;
     }
 
-    /* Main Chat */
     .main {
       flex: 1;
       display: flex;
@@ -47,7 +45,6 @@
     .topbar {
       background: #2b2d31;
       padding: 15px;
-      font-weight: 600;
       border-bottom: 1px solid #1e1f22;
       display: flex;
       justify-content: space-between;
@@ -60,14 +57,14 @@
     }
 
     .username-entry input {
-      padding: 5px 8px;
+      padding: 6px 8px;
       border-radius: 5px;
       border: none;
       outline: none;
     }
 
     .username-entry button {
-      padding: 5px 10px;
+      padding: 6px 10px;
       background: #5865f2;
       border: none;
       color: white;
@@ -88,7 +85,7 @@
     .username {
       font-weight: bold;
       color: #5865f2;
-      margin-right: 5px;
+      margin-right: 6px;
     }
 
     .input-area {
@@ -146,16 +143,18 @@
 
 <script>
 const backend = "https://lolscord-backend-8ghq.onrender.com";
+const messagesDiv = document.getElementById("messages");
+
 let socket = io(backend);
 
-// If username already saved → hide box
+// Hide username box if already saved
 if (localStorage.getItem("username")) {
   document.getElementById("usernameBox").style.display = "none";
 }
 
 // Save username
 function setUsername() {
-  const username = usernameInput.value.trim();
+  const username = document.getElementById("usernameInput").value.trim();
   if (!username) return;
 
   localStorage.setItem("username", username);
@@ -168,14 +167,16 @@ function logout() {
   location.reload();
 }
 
-// Load old messages
-socket.on("load messages", messages => {
+// Load old messages from MongoDB
+socket.on("load messages", (messages) => {
   messagesDiv.innerHTML = "";
   messages.forEach(addMessage);
 });
 
-// New messages
-socket.on("chat message", addMessage);
+// Receive new message
+socket.on("chat message", (msg) => {
+  addMessage(msg);
+});
 
 // Send message
 function sendMessage() {
@@ -185,6 +186,7 @@ function sendMessage() {
     return;
   }
 
+  const messageInput = document.getElementById("messageInput");
   const msg = messageInput.value.trim();
   if (!msg) return;
 
@@ -200,8 +202,14 @@ function sendMessage() {
 function addMessage(msg) {
   const div = document.createElement("div");
   div.className = "message";
-  div.innerHTML = "<span class='username'>" + msg.username + ":</span> " + msg.message;
-  messages.appendChild(div);
+  div.innerHTML =
+    "<span class='username'>" +
+    msg.username +
+    ":</span> " +
+    msg.message;
+
+  messagesDiv.appendChild(div);
+  messagesDiv.scrollTop = messagesDiv.scrollHeight;
 }
 </script>
 
