--- a/index.html
+++ b/index.html
@@ -78,14 +78,30 @@
       padding: 20px;
     }
 
+    /* UPDATED MESSAGE STYLE */
     .message {
       margin-bottom: 15px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .message-content {
+      max-width: 80%;
+      word-wrap: break-word;
     }
 
     .username {
       font-weight: bold;
       color: #5865f2;
       margin-right: 6px;
+    }
+
+    .time {
+      font-size: 11px;
+      color: #9ca3af;
+      white-space: nowrap;
+      margin-left: 10px;
     }
 
     .input-area {
@@ -167,7 +183,7 @@ function logout() {
   location.reload();
 }
 
-// Load old messages from MongoDB
+// Load old messages
 socket.on("load messages", (messages) => {
   messagesDiv.innerHTML = "";
   messages.forEach(addMessage);
@@ -192,21 +208,42 @@ function sendMessage() {
 
   socket.emit("chat message", {
     username: username,
-    message: msg
+    message: msg,
+    timestamp: new Date()
   });
 
   messageInput.value = "";
+}
+
+// Format time
+function formatTime(timestamp) {
+  const date = timestamp ? new Date(timestamp) : new Date();
+  let hours = date.getHours();
+  const minutes = date.getMinutes().toString().padStart(2, "0");
+  const ampm = hours >= 12 ? "PM" : "AM";
+  hours = hours % 12 || 12;
+  return hours + ":" + minutes + " " + ampm;
 }
 
 // Add message to UI
 function addMessage(msg) {
   const div = document.createElement("div");
   div.className = "message";
-  div.innerHTML =
+
+  const content = document.createElement("div");
+  content.className = "message-content";
+  content.innerHTML =
     "<span class='username'>" +
     msg.username +
     ":</span> " +
     msg.message;
+
+  const time = document.createElement("div");
+  time.className = "time";
+  time.textContent = formatTime(msg.timestamp);
+
+  div.appendChild(content);
+  div.appendChild(time);
 
   messagesDiv.appendChild(div);
   messagesDiv.scrollTop = messagesDiv.scrollHeight;
